k8s-manifests/network-policies/app-b-network-policy.yaml
#To enforce that Application B can only be accessed by Application A and 
# deny traffic from Application C to Application A.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-a-to-app-b
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: app-b
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: app-a
    ports:
    - protocol: TCP
      port: 5000
