k8s-manifests/network-policies/deny-all.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: app-ab
spec:
  podSelector: {}
  policyTypes:
  - Ingress
