k8s-manifests/network-policies/deny-app-c-to-app-a.yaml
### This is not exclusively required as we have already deny all policy on app-ab namespace.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-app-c-to-app-a
  # namespace: app-ab
spec:
  podSelector:
    matchLabels:
      app: app-a
  # policyTypes:
  # - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: app-c
